--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr>
         <h3>My Projects</h3>
         <ul>
-            <li class="links"><a href="https://yourusername.github.io/project-name" target="_main">My Projects</a></li>
+            <li class="links"><a href="https://aliraza-glitch.github.io/projects" target="_main">My Projects</a></li>
         </ul>
     </main> 
     <footer>
